feat: Add gas station search with Opinet API integration
- Station domain: controller, OilResponse DTO
- Opinet infra: OpinetClient (avgAllPrice, aroundAll), CoordinateConverter (KATEC/WGS84)
- RestTemplate: text/html content type support for Opinet API
- Various domain fixes and test updates

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>